// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModificationHistory should match snapshot 1`] = `
<div>
  <div
    class="fixed top-0 right-0 h-full w-96 bg-black/10 backdrop-blur-2xl border-l border-white/10 z-50 flex flex-col"
  >
    <div
      class="flex items-center justify-between p-4 border-b border-white/10"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polyline
            points="12 6 12 12 16 14"
          />
        </svg>
        <h2
          class="text-lg font-semibold"
        >
          Modification History
        </h2>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 w-10"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto p-4"
    >
      <div
        class="space-y-3"
      >
        <div
          class="border border-white/10 rounded-xl p-3 bg-white/10 hover:bg-white/15 transition-all"
        >
          <div
            class="flex items-start justify-between gap-2"
          >
            <div
              class="flex items-start gap-2 flex-1"
            >
              <div
                class="w-8 h-8 rounded-full bg-primary/20 backdrop-blur-sm flex items-center justify-center flex-shrink-0"
              >
                <svg
                  class="h-4 w-4 text-primary"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
              </div>
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <span
                    class="font-medium text-sm truncate"
                  >
                    testuser
                  </span>
                </div>
                <p
                  class="text-xs text-muted-foreground mt-0.5"
                >
                  25
                   pixel
                  s
                   changed
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  Region: (
                  10
                  , 
                  10
                  ) 
                  5
                  ×
                  5
                </p>
                <p
                  class="text-xs text-muted-foreground"
                >
                  just now
                </p>
              </div>
            </div>
            <div
              class="flex items-start gap-2 flex-shrink-0"
            >
              <canvas
                class="flex-shrink-0 border border-white/20 rounded"
                height="9"
                style="max-width: 48px; max-height: 48px; image-rendering: pixelated;"
                width="9"
              />
              <div
                class="flex flex-col items-center gap-1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="p-4 border-t border-white/10 bg-white/10"
    >
      <p
        class="text-xs text-muted-foreground text-center"
      >
        Recent pixel modifications
      </p>
    </div>
  </div>
</div>
`;

exports[`ModificationHistory should match snapshot when empty 1`] = `
<div>
  <div
    class="fixed top-0 right-0 h-full w-96 bg-black/10 backdrop-blur-2xl border-l border-white/10 z-50 flex flex-col"
  >
    <div
      class="flex items-center justify-between p-4 border-b border-white/10"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polyline
            points="12 6 12 12 16 14"
          />
        </svg>
        <h2
          class="text-lg font-semibold"
        >
          Modification History
        </h2>
      </div>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 w-10"
      >
        <svg
          class="h-5 w-5"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto p-4"
    >
      <div
        class="text-center py-12"
      >
        <svg
          class="h-12 w-12 mx-auto text-muted-foreground mb-4"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polyline
            points="12 6 12 12 16 14"
          />
        </svg>
        <p
          class="text-muted-foreground"
        >
          No modifications yet
        </p>
        <p
          class="text-sm text-muted-foreground mt-1"
        >
          Start placing pixels to see the history
        </p>
      </div>
    </div>
    <div
      class="p-4 border-t border-white/10 bg-white/10"
    >
      <p
        class="text-xs text-muted-foreground text-center"
      >
        Recent pixel modifications
      </p>
    </div>
  </div>
</div>
`;
